--- a/examples/csharp/programs/test_buildhat_passivemotor/test_buildhat_passivemotor.csproj
+++ b/examples/csharp/programs/test_buildhat_passivemotor/test_buildhat_passivemotor.csproj
@@ -30,8 +30,6 @@
 
   <Target Name="DeploySingle" AfterTargets="Publish" Condition="'$(PublishSingleFile)' == 'True' And '$(TARGETCOMPUTER)' != ''">
     <Exec Command="echo Deploying $(ProjectName) to $(TARGETCOMPUTER)" />
-    <Exec Command="scp $(OutputPath.Replace('\', '/'))publish/$(ProjectName) $(TARGETCOMPUTER):." />
-    <Exec Command="scp $(OutputPath.Replace('\', '/'))publish/*.so $(TARGETCOMPUTER):/usr/local/lib" />
-    <Exec Command="ssh $(TARGETCOMPUTER) ldconfig" />
+    <Exec Command="scp $(OutputPath.Replace('\', '/'))publish/$(ProjectName) $(TARGETCOMPUTER)" />
   </Target>
 </Project>
