Renamed libgpiod to libgpiod2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23572 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/libgpiod2/Makefile
+++ b/extensions/libgpiod2/Makefile
@@ -1,4 +1,4 @@
-# Makefile for building the libgpiod package for MuntsOS
+# Makefile for building the libgpiod V2 package for MuntsOS
 
 # Copyright (C)2025, Philip Munts dba Munts Technologies.
 #
@@ -26,7 +26,7 @@ MUNTSOS		?= /usr/local/share/muntsos
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 include $(LIBSIMPLEIO)/include/dpkg.mk
 
-PKGNAME		= libgpiod
+PKGNAME		= libgpiod2
 PKGVERSION	= $(shell date +%Y.%j)
 PKGARCH		= $(DEBARCH)
 PKGDIR		= $(PKGNAME)-muntsos-$(BOARDARCH)
