Restored some comments
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23583 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/csharp/programs/dotnet-iot/test_led/test_led.csproj
+++ b/examples/csharp/programs/dotnet-iot/test_led/test_led.csproj
@@ -10,11 +10,16 @@
     <NoWarn>NU5118</NoWarn>
   </PropertyGroup>
 
+  <!-- Reference NuGet packages -->
+
   <ItemGroup>
     <PackageReference Include="libsimpleio" Version="2.*" />
     <PackageReference Include="System.Device.Gpio" Version="4.0.1" />
     <Compile Include="../../../components/dotnet-iot/gpio.cs" Link="gpio.cs" />
   </ItemGroup>
+
+  <!-- Deploy application file(s) to the target computer indicated by the -->
+  <!-- TARGETCOMPUTER environment variable                                -->
 
   <Target Name="DeploySingle" AfterTargets="Publish" Condition="'$(PublishSingleFile)' == 'True' And '$(TARGETCOMPUTER)' != ''">
     <Exec Command="echo Deploying $(ProjectName) to $(TARGETCOMPUTER)" />
