Added device tree overlays with ADC scaling enabled
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23657 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/Makefile
+++ b/bootkernel/Makefile
@@ -78,6 +78,7 @@ ifeq ($(findstring RaspberryPi5, $(BOARDNAME)),)
 	rm -f $(DESTDIR)/overlays/*-pi5.dtbo
 else
 	rm -f $(DESTDIR)/overlays/Pi3ClickShield.dtbo
+	rm -f $(DESTDIR)/overlays/Pi3ClickShield-Scaled.dtbo
 	rm -f $(DESTDIR)/overlays/pwmchip0.dtbo
 endif
 endif
