--- a/boot/RaspberryPi/overlays/MUNTS-0018-Scaled.dts
+++ b/boot/RaspberryPi/overlays/MUNTS-0018-Scaled.dts
@@ -8,17 +8,7 @@
 	compatible = "brcm,bcm2835";
 
 	fragment@0 {
-		target-path = "/";
-		__overlay__ {
-			munts0018_3v3: munts0018-3v3 {
-				compatible = "regulator-fixed";
-				regulator-name = "munts0018_3v3";
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-				regulator-always-on;
-				status = "okay";
- 			};
-		};
+		target = <&vdd_3v3_reg>;
 	};
 
 	// Enable pwmchip0
@@ -44,7 +34,7 @@
 				compatible = "mcp3204";
 				reg = <1>;
 				spi-max-frequency = <1000000>;
-				vref-supply = <&munts0018_3v3>;
+				vref-supply = <&vdd_3v3_reg>;
 			};
 		};
 	};
