--- a/boot/RaspberryPi/overlays/MUNTS-0018.dts
+++ b/boot/RaspberryPi/overlays/MUNTS-0018.dts
@@ -7,11 +7,23 @@
 / {
 	compatible = "brcm,bcm2835";
 
+	// Create a fictitious voltage regulator for the MCP3204 reference
+ 
 	fragment@0 {
-		target = <&vdd_3v3_reg>;
+		target-path = "/";
+		__overlay__ {
+			munts_0018_vref: munts-0018-vref {
+				compatible = "regulator-fixed";
+				regulator-name = "munts_0018_vref";
+				regulator-min-microvolt = <3300000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-always-on;
+				status = "okay";
+ 			};
+		};
 	};
 
-	// Enable pwmchip0
+	// Power up the PWM controller, but don't assign any pins
 
 	fragment@1 {
 		target = <&pwm>;
@@ -21,7 +33,7 @@
 		};
 	};
 
-	// Enable MCP3204 on GPIO7
+	// Enable MCP3204 on SPI chip 0 slave select 0 (GPIO7)
 
 	fragment@2 {
 		target = <&spi0>;
@@ -34,8 +46,15 @@
 				compatible = "mcp3204";
 				reg = <1>;
 				spi-max-frequency = <1000000>;
-				vref-supply = <&vdd_3v3_reg>;
+				vref-supply = <&munts_0018_vref>;
 			};
 		};
+	};
+
+	// Define parameters to calibrate the MCP3204 reference voltage
+
+	__overrides__ {
+		min = <&munts_0018_vref>, "regulator-min-microvolt:0";
+		max = <&munts_0018_vref>, "regulator-max-microvolt:0";
 	};
 };
