--- a/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
+++ b/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
@@ -7,9 +7,25 @@
 / {
 	compatible = "xunlong,orangepi-zero2w";
 
-	// Enable MCP3204 on GPIO233 aka Raspberry Pi GPIO7
+	// Create a fictitious voltage regulator for the MCP3204 reference
 
 	fragment@0 {
+		target-path = "/";
+		__overlay__ {
+			munts_0018_vref: munts-0018-vref {
+				compatible = "regulator-fixed";
+				regulator-name = "munts_0018_vref";
+				regulator-min-microvolt = <3300000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-always-on;
+				status = "okay";
+ 			};
+		};
+	};
+
+	// Enable MCP3204 on SPI chip 1 slave select 0 (GPIO233 aka GPIO7)
+
+	fragment@1 {
 		target = <&spi1>;
 		__overlay__ {
 			#address-cells = <1>;
@@ -20,6 +36,7 @@
 				compatible = "mcp3204";
 				reg = <1>;
 				spi-max-frequency = <1000000>;
+				vref-supply = <&munts_0018_vref>;
 			};
 		};
 	};
