Cosmetic change to comment
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23674 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/RaspberryPi/overlays/Pi4ClickShield-pi5.dts
+++ b/boot/RaspberryPi/overlays/Pi4ClickShield-pi5.dts
@@ -81,7 +81,7 @@
 		};
 	};
 
-	/* Enable RP1 pwmchip2 but don't claim any GPIO pins */
+	/* Enable pwmchip2 but don't claim any GPIO pins */
 
 	fragment@5 {
 		target = <&pwm>;
