--- a/boot/RaspberryPi/overlays/Pi4ClickShield-pi4.dts
+++ b/boot/RaspberryPi/overlays/Pi4ClickShield-pi4.dts
@@ -81,7 +81,7 @@
 		};
 	};
 
-	/* Enable BCM2711 pwmchip0 but don't claim any GPIO pins */
+	/* Enable pwmchip0 but don't claim any GPIO pins */
 
 	fragment@5 {
 		target = <&pwm>;
