Enabled CONFIG_MCP4821
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23709 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi3Gadget.config
+++ b/bootkernel/kernel/RaspberryPi3Gadget.config
@@ -3295,7 +3295,7 @@ CONFIG_AD5593R=y
 # CONFIG_MAX5821 is not set
 CONFIG_MCP4725=y
 CONFIG_MCP4728=y
-# CONFIG_MCP4821 is not set
+CONFIG_MCP4821=y
 CONFIG_MCP4922=y
 # CONFIG_TI_DAC082S085 is not set
 # CONFIG_TI_DAC5571 is not set
