--- a/toolchain/libsimpleio/control
+++ b/toolchain/libsimpleio/control
@@ -5,4 +5,4 @@ Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
 Description: Linux Simple I/O library for @@BOARDNAME@@
-Depends: munts-libsimpleio, muntsos-common
+Depends: gcc-@@TOOLCHAIN@@-libs, munts-libsimpleio, muntsos-common
