--- a/boot/RaspberryPi/overlays/MCP23017.dts
+++ b/boot/RaspberryPi/overlays/MCP23017.dts
@@ -30,7 +30,7 @@
 			#size-cells = <0>;
 
 			mcp23017: mcp@20 {
-				compatible = "microchip,mcp23017";
+				compatible = "mcp23017";
 				reg = <0x20>;
 				gpio-controller;
 				#gpio-cells = <2>;
@@ -38,7 +38,7 @@
 				interrupt-parent = <&gpio>;
 				interrupts = <4 2>;
 				interrupt-controller;
-				microchip,irq-mirror;
+				irq-mirror;
 
 				status = "okay";
 			};
