Enabled CONFIG_SENSORS_TMP102, CONFIG_HDC100X, and CONFIG_SI7005
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23781 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi4.config
+++ b/bootkernel/kernel/RaspberryPi4.config
@@ -2437,7 +2437,7 @@ CONFIG_SENSORS_RASPBERRYPI_HWMON=y
 # CONFIG_SENSORS_SPD5118 is not set
 # CONFIG_SENSORS_TC74 is not set
 # CONFIG_SENSORS_THMC50 is not set
-# CONFIG_SENSORS_TMP102 is not set
+CONFIG_SENSORS_TMP102=y
 # CONFIG_SENSORS_TMP103 is not set
 # CONFIG_SENSORS_TMP108 is not set
 # CONFIG_SENSORS_TMP401 is not set
@@ -4137,14 +4137,14 @@ CONFIG_MCP4922=y
 # CONFIG_AM2315 is not set
 # CONFIG_DHT11 is not set
 # CONFIG_ENS210 is not set
-# CONFIG_HDC100X is not set
+CONFIG_HDC100X=y
 # CONFIG_HDC2010 is not set
 # CONFIG_HDC3020 is not set
 CONFIG_HTS221=y
 CONFIG_HTS221_I2C=y
 CONFIG_HTS221_SPI=y
 CONFIG_HTU21=y
-# CONFIG_SI7005 is not set
+CONFIG_SI7005=y
 # CONFIG_SI7020 is not set
 # end of Humidity sensors
 
