rpcbind needs /run -> /var/run
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23816 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -544,6 +544,7 @@ initramfs.d: COPYING
 	mkdir -p $@/mnt
 	mkdir -p $@/proc
 	mkdir -p $@/root/.ssh
+	ln -s var/run $@/run
 	mkdir -p $@/sbin
 	mkdir -p $@/sys
 	mkdir -p $@/tmp
