Remove library packages before reconstituting
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23848 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -124,6 +124,7 @@ build.done: source.done
 # Reconstitute previous build from installed files
 
 reconstitute:
+	sudo apt purge 'gcc-$(GCCARCH)-muntsos*lib*'
 	cp -R -P -p $(TOOLCHAIN_DIR) $(INSTALLDIR)
 	chmod -R u+w $(INSTALLDIR)
 	rm -rf $(INSTALLDIR)/bin/gpr* $(INSTALLDIR)/libexec/gprbuild* $(INSTALLDIR)/share/gpr
