Started working on RISCV-64
Does not build yet.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23854 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -51,6 +51,11 @@ ARCH		= aarch64
 CPUOPTS		= -CpARMV8
 BUILDOPTS	+= OPT=-dFPC_AARCH64 CROSSOPT="$(CPUOPTS)"
 endif
+ifeq ($(BOARDBASE), RISCV64)
+ARCH		= riscv64
+CPUOPTS		= -Cprv64gc
+BUILDOPTS	+= OPT=-dFPC_RISCV64 CROSSOPT="$(CPUOPTS)"
+endif
 
 BUILDNUM	?= 1
 PKGNAME		:= fpc-$(TOOLCHAIN_NAME)
