--- a/toolchain/crosstool/RISCV64.config
+++ b/toolchain/crosstool/RISCV64.config
@@ -532,7 +532,7 @@ CT_GLIBC_EXTRA_CONFIG_ARRAY=""
 CT_GLIBC_CONFIGPARMS=""
 # CT_GLIBC_ENABLE_DEBUG is not set
 CT_GLIBC_EXTRA_CFLAGS=""
-CT_GLIBC_ENABLE_OBSOLETE_LIBCRYPT=y
+# CT_GLIBC_ENABLE_OBSOLETE_LIBCRYPT is not set
 # CT_GLIBC_ENABLE_FORTIFIED_BUILD is not set
 # CT_GLIBC_DISABLE_VERSIONING is not set
 CT_GLIBC_OLDEST_ABI=""
