Enable CT_DEBUG_CT_SAVE_STEPS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23865 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/AArch64.config
+++ b/toolchain/crosstool/AArch64.config
@@ -46,7 +46,12 @@ CT_MODULES=y
 CT_EXPERIMENTAL=y
 # CT_ALLOW_BUILD_AS_ROOT is not set
 # CT_ENABLE_EXPERIMENTAL_BUNDLED_PATCHES is not set
-# CT_DEBUG_CT is not set
+CT_DEBUG_CT=y
+# CT_DEBUG_PAUSE_STEPS is not set
+CT_DEBUG_CT_SAVE_STEPS=y
+# CT_DEBUG_CT_SAVE_STEPS_GZIP is not set
+# CT_NO_OVERRIDE_LC_MESSAGES is not set
+# CT_DEBUG_INTERACTIVE is not set
 
 #
 # Paths
