Changed default target to build.done.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23876 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -52,7 +52,7 @@ endif
 GPRBUILDDIR	:= libexec/gprbuild-alire$(GPRBUILDVER)
 GPRBUILDDEST	:= $(PKGDIR)$(TOOLCHAIN_DIR)/$(GPRBUILDDIR)
 
-default: package.deb
+default: build.done
 
 ################################################################################
 
