Added goop to create cross-toolchain tarball
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23884 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/win64/x86_64-w64-mingw32/Makefile
+++ b/toolchain/win64/x86_64-w64-mingw32/Makefile
@@ -73,6 +73,14 @@ build.done: source.done
 
 ################################################################################
 
+# Create optional cross-toolchain tarball
+
+tarball.done: build.done
+	tar czf $(INSTALLDIR).tgz --exclude=build.log.bz2 $(INSTALLDIR)
+	touch $@
+
+################################################################################
+
 # Create optional Debian package
 
 BUILDNUM	?= 1
@@ -105,7 +113,7 @@ package.done : build.done
 
 clean:
 	-chmod -R u+w $(PKGDIR)
-	rm -rf package.done $(PKGDIR) $(PKGFILE)
+	rm -rf package.done *.tgz $(PKGDIR) $(PKGFILE)
 
 reallyclean: clean
 	-chmod -R u+w gcc*
